# algorithms-benchmark

./: .gitignore  AVLTree_8h.html  AVLTree_8h__dep__incl.dot  AVLTree_8h__incl.dot  AVLTree_8h_source.html  AudioSynthesizer_8cpp.html  AudioSynthesizer_8cpp__incl.dot  AudioSynthesizer_8h.html  AudioSynthesizer_8h__dep__incl.dot  AudioSynthesizer_8h__incl.dot  AudioSynthesizer_8h_source.html  BFS_8h.html  BFS_8h__dep__incl.dot  BFS_8h__incl.dot  BFS_8h_source.html  BST_8h.html  BST_8h__dep__incl.dot  BST_8h__incl.dot  BST_8h_source.html  BenchmarkHistoryManager_8h.html  BenchmarkHistoryManager_8h__dep__incl.dot  BenchmarkHistoryManager_8h__incl.dot  BenchmarkHistoryManager_8h_source.html  BenchmarkRecord_8h.html  BenchmarkRecord_8h__dep__incl.dot  BenchmarkRecord_8h__incl.dot  BenchmarkRecord_8h_source.html  BubbleSort_8h.html  BubbleSort_8h__dep__incl.dot  BubbleSort_8h__incl.dot  BubbleSort_8h_source.html  CMakeLists.txt  Command_8h.html  Command_8h__dep__incl.dot  Command_8h_source.html  DFS_8h.html  DFS_8h__dep__incl.dot  DFS_8h__incl.dot  DFS_8h_source.html  Dijkstra_8h.html  (+350 more)
app/: CMakeLists.txt
app/include/: AudioSynthesizer.h  GraphVisualizationWidget.h  GraphWindow.h  HistoryWindow.h  MainWindow.h  SortingWindow.h  TreeVisualizationWidget.h  TreeWindow.h  VisualizationWidget.h
app/include/states/: SortingWindowStates.h
app/src/: AudioSynthesizer.cpp  GraphVisualizationWidget.cpp  GraphWindow.cpp  HistoryWindow.cpp  MainWindow.cpp  SortingWindow.cpp  TreeVisualizationWidget.cpp  TreeWindow.cpp  VisualizationWidget.cpp  main.cpp
core/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  (+60 more)
(+37 files in other folders)
